--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -21,6 +21,6 @@ steps:
     cpiApiServiceKeyCredentialsId: ib23-d052537-pirapi
     integrationFlowId: ConsumeEventsFromS4HANACloudwitoutslaccicdtests
     integrationFlowVersion: 1.0.15
-    parameterKey: https://my304047-api.s4hana.ondemand.com/sap/opu/odata/sap/API_BUSINESS_PARTNER/A_BusinessPartner('${property.businessid}'){{s4cloudurl}}
+    parameterKey: httpAddressWithoutQuery
     parameterValue: https://myxxx-api.s4hana.ondemand.com/sap/opu/odata/sap/API_BUSINESS_PARTNER/A_BusinessPartner('${property.businessid}'){{s4cloudurl}}
     
