--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -22,5 +22,12 @@ steps:
     integrationFlowId: ConsumeEventsFromS4HANACloudwitoutslack
     
     
+  IntegrationArtifactUpdateConfiguration:
+    cpiApiServiceKeyCredentialsId: ib23-d052537-pirapi
+    integrationFlowId: ConsumeEventsFromS4HANACloudwitoutslack
+    integrationFlowVersion: 1.0.16
+    parameterKey: httpAddressWithoutQuery
+    parameterValue: https://myxxx-api.s4hana.ondemand.com/sap/opu/odata/sap/API_BUSINESS_PARTNER/A_BusinessPartner('${property.businessid}'){{s4cloudurl}}
+    
     
     
