--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -26,7 +26,7 @@ steps:
     cpiApiServiceKeyCredentialsId: ib23-d052537-pirapi
     integrationFlowId: ConsumeEventsFromS4HANACloudwitoutslack
     integrationFlowVersion: 1.0.16
-    parameterKey: s4cloudurl
+    parameterKey: httpAddressWithoutQuery
     parameterValue: https://myxxx-api.s4hana.ondemand.com/sap/opu/odata/sap/API_BUSINESS_PARTNER/A_BusinessPartner('${property.businessid}'){{s4cloudurl}}
     
     
