--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -28,6 +28,7 @@ steps:
     integrationFlowVersion: 1.0.16
     parameterKey: httpAddressWithoutQuery
     parameterValue: https://myxxx-api.s4hana.ondemand.com/sap/opu/odata/sap/API_BUSINESS_PARTNER/A_BusinessPartner('${property.businessid}'){{s4cloudurl}}
+    verbose:true
     
     
     
