--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -26,8 +26,8 @@ steps:
     cpiApiServiceKeyCredentialsId: ib23-d052537-pirapi
     integrationFlowId: ConsumeEventsFromS4HANACloudwitoutslack
     integrationFlowVersion: 1.0.16
-    parameterKey: inboundpath
-    parameterValue: /consume/s4hana/events/withoutslackdevx
+    parameterKey: 'inboundpath'
+    parameterValue: '/consume/s4hana/events/withoutslackdevx'
     
     
     
