--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -25,9 +25,10 @@ steps:
   IntegrationArtifactUpdateConfiguration:
     cpiApiServiceKeyCredentialsId: ib23-d052537-pirapi
     integrationFlowId: ConsumeEventsFromS4HANACloudwitoutslack
-    integrationFlowVersion: 1.0.16
+    integrationFlowVersion: active
     parameterKey: inboundpath
     parameterValue: xx
+    verbose: true
     
     
     
