--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -25,8 +25,8 @@ steps:
   IntegrationArtifactUpdateConfiguration:
     cpiApiServiceKeyCredentialsId: ib23-d052537-pirapi
     integrationFlowId: ConsumeEventsFromS4HANACloudwitoutslack
-    integrationFlowVersion: active
-    parameterKey: inboundpath
+    integrationFlowVersion: 1.0.16
+    parameterKey: s4cloudcred
     parameterValue: xx
     verbose: true
     
