--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -27,7 +27,7 @@ steps:
     integrationFlowId: ConsumeEventsFromS4HANACloudwitoutslack
     integrationFlowVersion: 1.0.16
     parameterKey: s4cloudcred
-    parameterValue: xx
+    parameterValue: s4hanacloud
     verbose: true
     
     
