--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -24,6 +24,7 @@ steps:
     
   IntegrationArtifactUpdateConfiguration:
     cpiApiServiceKeyCredentialsId: ib23-d052537-pirapi
+    apiServiceKey: ib23-d052537-pirapi
     integrationFlowId: ConsumeEventsFromS4HANACloudwitoutslack
     integrationFlowVersion: 1.0.16
     parameterKey: s4cloudcred
