--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -5,7 +5,14 @@ steps:
     integrationFlowName: ConsumeEventsFromS4HANACloudwitoutslack
     packageId: 01cicdpiper
     filePath: ConsumeEventsFromS4HANACloudwitoutslack.zip
-    
+
+  integrationArtifactUpdateConfiguration:
+    cpiApiServiceKeyCredentialsId: ib23-d052537-pirapi
+    integrationFlowId: ConsumeEventsFromS4HANACloudwitoutslack
+    integrationFlowVersion: 1.0.16
+    parameterKey: 'MY_INTEGRATION_FLOW_CONFIG_PARAMETER_NAME'
+    parameterValue: 'MY_INTEGRATION_FLOW_CONFIG_PARAMETER_VALUE'
+
     
   integrationArtifactDeploy:
     cpiApiServiceKeyCredentialsId: ib23-d052537-pirapi
