--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -10,9 +10,8 @@ steps:
     cpiApiServiceKeyCredentialsId: ib23-d052537-pirapi
     integrationFlowId: ConsumeEventsFromS4HANACloudwitoutslack
     integrationFlowVersion: 1.0.16
-    parameterKey: 'MY_INTEGRATION_FLOW_CONFIG_PARAMETER_NAME'
-    parameterValue: 'MY_INTEGRATION_FLOW_CONFIG_PARAMETER_VALUE'
-
+    parameterKey: s4cloudcred
+    parameterValue: xyz
     
   integrationArtifactDeploy:
     cpiApiServiceKeyCredentialsId: ib23-d052537-pirapi
