--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -1,8 +1,9 @@
+general:
+    cpiApiServiceKeyCredentialsId: ib23-d052537-pirapi
 steps:
     integrationArtifactUpload:
-        cpiApiServiceKeyCredentialsId: ib23-d052537-pirapi
+        apiServiceKey: ib23-d052537-pirapi
         integrationFlowId: ConsumeEventsFromS4HANACloudwitoutslack
         integrationFlowName: ConsumeEventsFromS4HANACloudwitoutslack
         packageId: 01cicdpiper
-        filePath: ConsumeEventsFromS4HANACloudwitoutslack.zip
-        verbose: true
+        filePath: ConsumeEventsFromS4HANACloudwitoutslack
