--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -14,8 +14,8 @@ steps:
     cpiApiServiceKeyCredentialsId: ib23-d052537-pirapi
     integrationFlowId: ConsumeEventsFromS4HANACloudwitoutslaccicdtests
 
-   waitstep:
+   waitstep:{
     echo 'Wait !!'
     sleep 20  
     echo 'After waiting'
-            
+         }  
